# rfast

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cargo-eval.crs  cargo-play.rs  cargo-script-block.crs  cargo-script.rs  github_info.rs  hello.rs  rust-script.rs  test_example.rs
src/: cache.rs  main.rs  parser.rs  runner.rs  ui.rs
