[package]
name = "rfast"
version = "1.0.0"
edition = "2024"
description = "Run Rust files like scripts — instant caching, inline dependencies, zero boilerplate"
license = "MIT"
authors = ["NameOfShadow <0nameofshadow0@gmail.com>"]
repository = "https://github.com/NameOfShadow/rfast"
homepage = "https://github.com/NameOfShadow/rfast"
documentation = "https://docs.rs/rfast"
readme = "README.md"
keywords = ["script", "runner", "cargo", "eval", "rust-script"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "rfast"
path = "src/main.rs"

[dependencies]
sha2 = "0.11.0"
toml = "1.1.2+spec-1.1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.6", features = ["derive", "color"] }
clap_complete = "4.6" 
anyhow = "1"
hex = "0.4.3"
tempfile = "3.27"
colored = "3.1"
dirs = "6.0.0"